# auto-lyrics-pro-presenter

./: .gitignore  DESIGN.md  INSTRUCTIONS.md  LICENSE  README.md  pyproject.toml  requirements.txt
src/: __init__.py  audio_capture.py  config.py  lyric_engine.py  main.py  matcher.py  pro_export.py  propresenter_bridge.py  slide_tracker.py  song_loader.py  vocal_isolation.py
src/pp_proto/: __init__.py  action_pb2.py  alignmentGuide_pb2.py  audio_pb2.py  background_pb2.py  baseDocument_pb2.py  basicTypes_pb2.py  calendar_pb2.py  ccli_pb2.py  clearGroups_pb2.py  cue_pb2.py  digitalAudio_pb2.py  dmxProfiles_pb2.py  effects_pb2.py  graphicsData_pb2.py  groups_pb2.py  hotKey_pb2.py  input_pb2.py  keymapping_pb2.py  labels_pb2.py  layers_pb2.py  library_pb2.py  liveVideoPlaylist_pb2.py  macros_pb2.py  masks_pb2.py  messages_pb2.py  planningCenter_pb2.py  playlistTemplate_pb2.py  playlist_pb2.py  presentationSlide_pb2.py  presentation_pb2.py  proApiV1BasicTypes_pb2.py  proApiV1_pb2.py  proApi_pb2.py  proAudienceLook_pb2.py  proCore_pb2.py  proMask_pb2.py  propDocument_pb2.py  propSlide_pb2.py  propresenter_pb2.py  (+13 more)
tests/: harness.py  pp_verify.py  run_playlist.py  test_matcher.py  test_slide_tracker.py
tests/live_playlist/: playlist.json  results.json
tests/playlist/: 10_great_are_you_lord.txt  1_amazing_grace.txt  2_how_great_thou_art.txt  3_holy_holy_holy.txt  4_be_thou_my_vision.txt  5_come_thou_fount.txt  6_it_is_well.txt  7_in_christ_alone.txt  8_ten_thousand_reasons.txt  9_here_i_am_to_worship.txt
tools/: create_playlist.py  e2e_live.py  make_test_song.py  rebuild_failing.sh  setout  test_all_songs.sh  test_playlist_offline.py
