[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "auto-lyrics-pro-presenter"
version = "0.1.0"
description = "Real-time lyric recognition and auto-advance for ProPresenter"
requires-python = ">=3.11"
dependencies = [
    "openai-whisper>=20231117",
    "torch>=2.1.0",
    "numpy>=1.24.0",
    "sounddevice>=0.4.6",
    "soundfile>=0.12.1",
    "scipy>=1.11.0",
    "demucs>=4.0.0",
    "python-osc>=1.8.3",
    "requests>=2.31.0",
    "pyyaml>=6.0",
    "loguru>=0.7.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
]

[tool.setuptools.packages.find]
where = ["src"]
